# Sim-Py

./: README.md
expensetracker/: expenses.json  main.py  model.py  operations.py  storage.py
multisorter/: learning.md  pyproject.toml
multisorter/multisorter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
multisorter/smart_organizer/: cli.py  config.py  organizer.py  worker.py
multithreader/: learning.md
multithreader/smart_organizer/: config.py  organizer.py  scanner.py  worker.py
